#ifndef BSC_THESIS_TIMINGS_BASE_H
#define BSC_THESIS_TIMINGS_BASE_H

struct TimingsBase {
    float All_ms;
};

#endif//BSC_THESIS_TIMINGS_BASE_H
